--- a/.gitignore
+++ b/.gitignore
@@ -12,22 +12,7 @@
 [Bb]uilds/
 [Ll]ogs/
 [Mm]emoryCaptures/
-
-Free_Electron_Unity/Assets/Ludiq/Assemblies
-Free_Electron_Unity/Assets/Ludiq/Assemblies.meta
-Free_Electron_Unity/Assets/Ludiq/Ludiq
-Free_Electron_Unity/Assets/Ludiq/Ludiq.meta
-Free_Electron_Unity/Assets/Ludiq/*/LICENSES.txt
-Free_Electron_Unity/Assets/Ludiq/*/LICENSES.txt.meta
-Free_Electron_Unity/Assets/Ludiq/*/Documentation
-Free_Electron_Unity/Assets/Ludiq/*/Documentation.meta
-Free_Electron_Unity/Assets/Ludiq/*/IconMap
-Free_Electron_Unity/Assets/Ludiq/*/IconMap.meta
-Free_Electron_Unity/Assets/Ludiq/Ludiq.Core/DotNetDocumentation
-Free_Electron_Unity/Assets/Ludiq/Ludiq.Core/DotNetDocumentation.meta
-Free_Electron_Unity/Assets/Ludiq/*/*.root
-Free_Electron_Unity/Assets/Ludiq/*/*.root.meta
-
+Ludiq
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
