Scriptable Object + Menu Selection Ergo

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 
 Free_Electron_Unity/Assets/Bolt_1_4_15_Source.zip
 Free_Electron_Unity/Assets/Bolt_1_4_15_Source.zip.meta
+Free_Electron_Unity/Assets/TextMesh Pro
+Free_Electron_Unity/Assets/TextMesh Pro.meta
